--- a/Project_Python/py_bootcamp/statements.ipynb
+++ b/Project_Python/py_bootcamp/statements.ipynb
@@ -1,6 +1,56 @@
 {
- "cells": [],
- "metadata": {},
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 0\n",
+    "b = -1\n",
+    "if a > b:\n",
+    "    a = 2\n",
+    "    b = 4\n",
+    "print a\n",
+    "print b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 2",
+   "language": "python",
+   "name": "python2"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 2
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython2",
+   "version": "2.7.12"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 2
 }
