--- a/Project_Python/py_bootcamp/OOP.ipynb
+++ b/Project_Python/py_bootcamp/OOP.ipynb
@@ -388,6 +388,86 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# homework-1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Line(object):\n",
+    "    def __init__(self, coor1, coor2):\n",
+    "        self.coor1 = coor1\n",
+    "        self.coor2 = coor2\n",
+    "        self.x1, self.y1 = self.coor1\n",
+    "        self.x2, self.y2 = self.coor2\n",
+    "    \n",
+    "    def distance(self):\n",
+    "        #x1, y1 = self.coor1\n",
+    "        #x2, y2 = self.coor2\n",
+    "        return ((self.x1-self.x2)**2 + (self.y1-self.y2)**2)**0.5\n",
+    "    \n",
+    "    def slope(self):\n",
+    "        return ((self.x2 - self.x1)/(self.y2 - self.y1));"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m_line = Line((1,1), (8,2.5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7.158910531638177"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m_line.distance()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.666666666666667"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m_line.slope()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
