--- a/Project_Python/pyPlayground.ipynb
+++ b/Project_Python/pyPlayground.ipynb
@@ -9022,54 +9022,101 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dir()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3136\n",
+      "2916\n"
+     ]
+    }
+   ],
+   "source": [
+    " while True:\n",
+    "        reply = input(\"Enter:\")\n",
+    "        if reply == \"stop\": break\n",
+    "        print(int(reply)**2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 2]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "range(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 2]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(range(3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-12-8656ddfe4090>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-12-8656ddfe4090>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    a, *b = range(100)\u001b[0m\n\u001b[0m       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "a, *b = range(100)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['In',\n",
-       " 'Out',\n",
-       " '_',\n",
-       " '_1',\n",
-       " '_11',\n",
-       " '_12',\n",
-       " '_2',\n",
-       " '_3',\n",
-       " '_4',\n",
-       " '_5',\n",
-       " '_6',\n",
-       " '_7',\n",
-       " '_8',\n",
-       " '__',\n",
-       " '___',\n",
-       " '__builtin__',\n",
-       " '__builtins__',\n",
-       " '__doc__',\n",
-       " '__name__',\n",
-       " '_dh',\n",
-       " '_i',\n",
-       " '_i1',\n",
-       " '_i10',\n",
-       " '_i11',\n",
-       " '_i12',\n",
-       " '_i13',\n",
-       " '_i2',\n",
-       " '_i3',\n",
-       " '_i4',\n",
-       " '_i5',\n",
-       " '_i6',\n",
-       " '_i7',\n",
-       " '_i8',\n",
-       " '_i9',\n",
-       " '_ih',\n",
-       " '_ii',\n",
-       " '_iii',\n",
-       " '_oh',\n",
-       " '_sh',\n",
-       " 'exit',\n",
-       " 'get_ipython',\n",
-       " 'quit']"
+       "bool"
       ]
      },
      "execution_count": 13,
@@ -9078,7 +9125,473 @@
     }
    ],
    "source": [
-    "dir()"
+    "type(2>3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=0\n",
+    "b=10\n",
+    "while a<b:\n",
+    "    print(a)\n",
+    "    a += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-5-d3de24265832>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-5-d3de24265832>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    x = ...\u001b[0m\n\u001b[0m        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = ..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[-5, -6, -7, -8, -9, -10, -11, -12, -13, -14]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(range(-5, -15, -1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = \"abcdefghijklmnopqrstuvwxyz\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a\n",
+      "c\n",
+      "e\n",
+      "g\n",
+      "i\n",
+      "k\n",
+      "m\n",
+      "o\n",
+      "q\n",
+      "s\n",
+      "u\n",
+      "w\n",
+      "y\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in xrange(0, len(s), 2): \n",
+    "    print s[i]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a\n",
+      "c\n",
+      "e\n",
+      "g\n",
+      "i\n",
+      "k\n",
+      "m\n",
+      "o\n",
+      "q\n",
+      "s\n",
+      "u\n",
+      "w\n",
+      "y\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in s[::2]:\n",
+    "    print i"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 7 -- 8\n",
+      "2 8 -- 10\n",
+      "3 9 -- 12\n",
+      "4 10 -- 14\n",
+      "5 11 -- 16\n",
+      "6 12 -- 18\n"
+     ]
+    }
+   ],
+   "source": [
+    "L1 = [1,2,3,4,5,6]\n",
+    "L2 = [7,8,9,10,11,12]\n",
+    "\n",
+    "for (x,y) in zip(L1, L2):\n",
+    "    print x,y,'--', x+y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[115, 112, 97, 109]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "map(ord, 'spam')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<function ord>"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ord"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'# ways of closing the python shell\\n'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f = open('pythonNotes.py')\n",
+    "f.next()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\t# closes the python shell and put back the usual terminal\\n'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f.next()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\t\\texit()\\n'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "next(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "# This tutorial is analogous to theano1.py\n",
+      "# It introduces basic variables and functions\n",
+      "# and shows how you can optimize a function.\n",
+      "# I compare this to theano1.py multiple times.\n",
+      "# So you might want to check that out first.\n",
+      "\n",
+      "# For the class Data Science: Practical Deep Learning Concepts in Theano and TensorFlow\n",
+      "# https://deeplearningcourses.com/c/data-science-deep-learning-in-theano-tensorflow\n",
+      "# https://www.udemy.com/data-science-deep-learning-in-theano-tensorflow\n",
+      "from __future__ import print_function, division\n",
+      "from builtins import range\n",
+      "# Note: you may need to update your version of future\n",
+      "# sudo pip install -U future\n",
+      "\n",
+      "import numpy as np\n",
+      "import tensorflow as tf\n",
+      "\n",
+      "\n",
+      "# you have to specify the type\n",
+      "A = tf.placeholder(tf.float32, shape=(5, 5), name='A')\n",
+      "\n",
+      "\n",
+      "# but shape and name are optional\n",
+      "v = tf.placeholder(tf.float32)\n",
+      "\n",
+      "\n",
+      "# I think this name is more appropriate than 'dot'\n",
+      "w = tf.matmul(A, v)\n",
+      "\n",
+      "\n",
+      "# similar to Theano, you need to \"feed\" the variables values.\n",
+      "# In TensorFlow you do the \"actual work\" in a \"session\".\n",
+      "\n",
+      "with tf.Session() as session:\n",
+      "    # the values are fed in via the appropriately named argument \"feed_dict\"\n",
+      "    # v needs to be of shape=(5, 1) not just shape=(5,)\n",
+      "    # it's more like \"real\" matrix multiplication\n",
+      "    output = session.run(w, feed_dict={A: np.random.randn(5, 5), v: np.random.randn(5, 1)})\n",
+      "\n",
+      "    # what's this output that is returned by the session? let's print it\n",
+      "    print(output, type(output))\n",
+      "\n",
+      "    # luckily, the output type is just a numpy array. back to safety!\n",
+      "\n",
+      "\n",
+      "# TensorFlow variables are like Theano shared variables.\n",
+      "# But Theano variables are like TensorFlow placeholders.\n",
+      "# Are you confused yet?\n",
+      "\n",
+      "# A tf variable can be initialized with a numpy array or a tf array\n",
+      "# or more correctly, anything that can be turned into a tf tensor\n",
+      "shape = (2, 2)\n",
+      "x = tf.Variable(tf.random_normal(shape))\n",
+      "# x = tf.Variable(np.random.randn(2, 2))\n",
+      "t = tf.Variable(0) # a scalar\n",
+      "\n",
+      "# you need to \"initialize\" the variables first\n",
+      "init = tf.global_variables_initializer()\n",
+      "\n",
+      "with tf.Session() as session:\n",
+      "    out = session.run(init) # and then \"run\" the init operation\n",
+      "    print(out) # it's just None\n",
+      "\n",
+      "    # eval() in tf is like get_value() in Theano\n",
+      "    print(x.eval()) # the initial value of x\n",
+      "    print(t.eval())\n",
+      "\n",
+      "\n",
+      "# let's now try to find the minimum of a simple cost function like we did in Theano\n",
+      "u = tf.Variable(20.0)\n",
+      "cost = u*u + u + 1.0\n",
+      "\n",
+      "# One difference between Theano and TensorFlow is that you don't write the updates\n",
+      "# yourself in TensorFlow. You choose an optimizer that implements the algorithm you want.\n",
+      "# 0.3 is the learning rate. Documentation lists the params.\n",
+      "train_op = tf.train.GradientDescentOptimizer(0.3).minimize(cost)\n",
+      "\n",
+      "# let's run a session again\n",
+      "init = tf.global_variables_initializer()\n",
+      "with tf.Session() as session:\n",
+      "    session.run(init)\n",
+      "\n",
+      "    # Strangely, while the weight update is automated, the loop itself is not.\n",
+      "    # So we'll just call train_op until convergence.\n",
+      "    # This is useful for us anyway since we want to track the cost function.\n",
+      "    for i in range(12):\n",
+      "        session.run(train_op)\n",
+      "        print(\"i = %d, cost = %.3f, u = %.3f\" % (i, cost.eval(), u.eval()))\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for line in open('tensorflow1.py'):\n",
+    "    print line,"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['', '/usr/lib/python2.7', '/usr/lib/python2.7/plat-x86_64-linux-gnu', '/usr/lib/python2.7/lib-tk', '/usr/lib/python2.7/lib-old', '/usr/lib/python2.7/lib-dynload', '/home/potter217/.local/lib/python2.7/site-packages', '/usr/local/lib/python2.7/dist-packages', '/usr/lib/python2.7/dist-packages', '/usr/lib/python2.7/dist-packages/PILcompat', '/usr/lib/python2.7/dist-packages/gtk-2.0', '/usr/local/lib/python2.7/dist-packages/IPython/extensions', '/home/potter217/.ipython']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "print sys.path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "L = [1,2,3,4,5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "I = iter(L)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<listiterator at 0x7f6d3c5781d0>"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "I"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "I.next()"
    ]
   },
   {
