The Game of Life _ v1

--- a/Project_Python/numpy_labri_fr.ipynb
+++ b/Project_Python/numpy_labri_fr.ipynb
@@ -548,10 +548,263 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "########\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def add_python(z1,z2):\n",
+    "    return [z1+z2 for (z1,z2) in zip(z1,z2)]\n",
+    "\n",
+    "def add_numpy(z1,z2):\n",
+    "    return np.add(z1,z2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "z1 = [[1,2],[3,4]]\n",
+    "z2 = [[5,6],[7,8]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[1, 2], [3, 4], [5, 6], [7, 8]]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "z1+z2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[1, 2, 5, 6], [3, 4, 7, 8]]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "add_python(z1,z2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 6,  8],\n",
+       "       [10, 12]])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "add_numpy(z1,z2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Game of Life:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "Rules:\n",
+    "1. DEATH happens: any live cell with fewer than 2 live neighbors (cause underpopulation\n",
+    "2. DEATH happens: any live cell with more than 3 live neighbors (overpopulation)\n",
+    "3. SURVIVAL happens: any live cell with 2 or 3 live neighbors survives for next generation.\n",
+    "4. RE-BIRTH happens: any dead cell with exactly 3 live neighbors become alive\n",
+    "\n",
+    "SEED : Initial pattern\n",
+    "\n",
+    "Births & Deaths happen simultaneously\n",
+    "TICK: the descrete moment when birth and death happens\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Python Implementation:\n",
+    "def compute_gen_score(Z):\n",
+    "    shape = len(Z), len(Z[0]) #(rows, cols) == (y,x)\n",
+    "    score = [[0,]*(shape[0]) for i in range(shape[1])]\n",
+    "    for x in range(1, shape[1]-1):\n",
+    "        for y in range(1, shape[0]-1):\n",
+    "            score[x][y] = Z[x-1][y-1] + Z[x][y-1] + Z[x+1][y-1] + \\\n",
+    "                            Z[x-1][y] + Z[x+1][y] + \\\n",
+    "                            Z[x-1][y+1] + Z[x][y+1] + Z[x+1][y+1]\n",
+    "    \n",
+    "#     print(score)\n",
+    "    return score\n",
+    "\n",
+    "#---------------\n",
+    "def iterate(Z):\n",
+    "    score = compute_gen_score(Z)\n",
+    "    \n",
+    "    for x in range(len(Z[0])-1):\n",
+    "        for y in range(len(Z)-1):\n",
+    "            if Z[x][y] == 1 and (score[x][y] < 2 or score[x][y] > 3):\n",
+    "                ### death\n",
+    "                Z[x][y] = 0\n",
+    "            elif Z[x][y] == 0 and score[x][y] == 3:\n",
+    "                ### rebirth\n",
+    "                Z[x][y] = 1\n",
+    "    return Z\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "# Numpy Implementation\n",
+    "def game_of_life(Z):\n",
+    "    score_np = np.zeros(Z.shape, np.int)\n",
+    "    score_np += np.add(Z[:-2][:-2], Z[:-2, 1:-1], Z[:-2, 2:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[0, 0, 0, 0, 0, 0],\n",
+       " [0, 0, 0, 1, 0, 0],\n",
+       " [0, 1, 0, 1, 0, 0],\n",
+       " [0, 0, 1, 1, 0, 0],\n",
+       " [0, 0, 0, 0, 0, 0],\n",
+       " [0, 0, 0, 0, 0, 0]]"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Z = [[0,0,0,0,0,0],\n",
+    "     [0,0,0,1,0,0],\n",
+    "     [0,1,0,1,0,0],\n",
+    "     [0,0,1,1,0,0],\n",
+    "     [0,0,0,0,0,0],\n",
+    "     [0,0,0,0,0,0]]\n",
+    "Z"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[0, 0, 0, 0, 0, 0],\n",
+       " [0, 0, 1, 0, 0, 0],\n",
+       " [0, 0, 0, 1, 1, 0],\n",
+       " [0, 0, 1, 1, 0, 0],\n",
+       " [0, 0, 0, 0, 0, 0],\n",
+       " [0, 0, 0, 0, 0, 0]]"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "iterate(Z)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 0, 0, 0, 0, 0],\n",
+       "       [0, 0, 3, 0, 0, 0]])"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr = Z[:-2][:-2], Z[:-2][:-2], Z[:-2][:-2]\n",
+    "np.sum(arr, axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[0, 0, 1, 0, 0, 0], [0, 0, 0, 1, 1, 0]]"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a =Z[:-2][1:-1]\n",
+    "a\n",
+    "# a[:-2]?"
+   ]
   },
   {
    "cell_type": "code",
